--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -2,7 +2,7 @@
     <div ng-show="!$root.isLoggedIn">
         <p>Die kollaborative Plattform zum Crowdsourcing von Sendungsnotizen. <a href="#">Mehr <span class="icon-arrow-right"></span></a></p>
         <form class="account">
-            <input type="text" placeholder="Benutzername" value="" title="Gib deinen Benutzernamen ein" focus-on="registerStarted" />
+            <input type="text" placeholder="Benutzername" value="" title="Gib deinen Benutzernamen ein" focus-on="modeRegister" />
             <input type="text" placeholder="E-Mail-Adresse" value="" title="Gib deine E-Mail-Adresse" ng-show="modeRegister" />
             <input type="password" placeholder="Passwort" value="" title="Gib dein Passwort ein" />
             <a href="#" class="lostpass" title="Passwort vergessen?">?</a>
