pad-list: load more

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,4 +17,4 @@
         </td>
     </tr>
 </table>
-<button class="load"><span class="icon-loop"></span>Mehr laden</button>
+<button class="load" ng-click="loadMorePads()"><span class="icon-loop"></span>Mehr laden</button>
