translated "Live-Sendungen:"

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<h2>Live-Sendungen:</h2>
+<h2 translate="main.list.title"></h2>
 <table class="padlist">
     <tr>
         <th translate="main.list.starttime"></th>
