--- a/app/views/sidebar.html
+++ b/app/views/sidebar.html
@@ -12,14 +12,14 @@
         </form>
     </div>
     <div ng-show="$root.user">
-        <p>
-            <span translate="sidebar.status.loggedInAs"></span> <strong>{{ $root.user.name }}</strong><br />
-            <span translate="sidebar.status.groups"></span> <ul><li ng-repeat="group in $root.user.groups">{{ group.longname }}</li></ul>
+        <p class="userstatus">
+            {{'sidebar.status.loggedInAs'|translate}} <strong>{{ $root.user.name }}</strong><br />
+            {{'sidebar.status.groups'|translate}} <ul><li ng-repeat="group in $root.user.groups">{{ group.longname }}</li></ul>
         </p>
         <ul class="usermenu">
-            <li><a href="#"><span class="icon-user"></span><span translate="sidebar.status.menu.editProfile"></span></a></li>
-            <li><a href="#"><span class="icon-wrench"></span><span translate="sidebar.status.menu.admin"></span></a></li>
-            <li><a ng-click="logout()"><span class="icon-close"></span><span translate="sidebar.status.menu.logout"></span></a></li>
+            <li><a href="#"><span class="icon-user"></span>{{'sidebar.status.menu.editProfile'|translate}}</a></li>
+            <li><a href="#"><span class="icon-wrench"></span>{{'sidebar.status.menu.admin'|translate}}</a></li>
+            <li><a ng-click="logout()"><span class="icon-close"></span>{{'sidebar.status.menu.logout'|translate}}</a></li>
         </ul>
     </div>
 </div>
