--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -22,7 +22,7 @@ hr { border: 0; border-top: 2px solid #FFE3A4; }
 table { font-size: 14px; width: 100%; border-collapse: collapse; border-spacing: 0; }
 tr { }
 td, th { height: 37px; width: 200px; padding-right: 8px; border-bottom: 2px solid #444038; }
-th { color: #444038; text-align: left; }
+th { /*color: #444038;*/ text-align: left; }
 .left { float: left; }
 .right { float: right; }
 .center { text-align: center; }
@@ -32,7 +32,7 @@ form { font-size: 0; position: relative; }
 input[type='text'], input[type='password'] { background-color: #2F2D27; color: #FFE3A4; font-size: 14px; width: 164px; height: 37px; padding: 0 16px; display: inline-block; border: 2px solid #444038; }
 input:focus { outline: none; }
 input[type='text']:focus, input[type='password']:focus { background-color: #292722; }
-input[type='submit'], button { background-color: #292722; color: #FF8468; font-size: 14px; font-weight: bold; /* text-shadow: 1px 1px 0px #7A4135; */ text-align: center; display: inline-block; width: 100px; padding: 8px 0; border: 2px solid #444038; }
+input[type='submit'], button { background-color: #292722; color: #FF8468; font-size: 14px; font-weight: bold; /* text-shadow: 1px 1px 0px #7A4135; */ text-align: center; text-shadow: 1px 1px 0px rgba(0,0,0,0.3); display: inline-block; width: 100px; padding: 8px 0; border: 2px solid #444038; }
 input[type='submit']:hover, input[type='submit']:focus, button:hover, button:focus { background-color: #444038; cursor: pointer; }
 input[type='submit'].login { border-right: none; }
 ::-webkit-input-placeholder { color: #FFE3A4; }
@@ -42,22 +42,26 @@ input[type='submit'].login { border-right: none; }
 input::-ms-clear { display: none; }
 
 /* Links */
-a:link, a:visited { color: #FF8468; text-decoration: none; /* text-shadow: 1px 1px 0px #7A4135; */ }
-h1 a:hover, .sidebar p a:hover, .item h2 a:hover, .item p a:hover { color: #F9B377; }
+a:link, a:visited { color: #FF8468; text-decoration: none; text-shadow: 1px 1px 0px rgba(0,0,0,0.3); }
+.sidebar p a:hover, .item h2 a:hover, .item p a:hover { color: #F9B377; }
 
 /* Body */
 body { background-color: #FFE3A4; color: #2F2D27; font-size: 0;  margin: 0 5%; }
 body > div { width: auto; padding: 0 32px; margin: 0 auto; }
 
 /* Header */
-.top { background-color: #2F2D27; color: #444038; position: relative; padding: 0 32px; margin-top: 32px; overflow: hidden; border-bottom: 2px solid #444038; }
-.top h1 { background: url('../images/logo.svg') no-repeat 142px -8px; display: inline-block; width: 200px; padding: 16px 32px 16px 0; border-right: 2px solid #444038; }
-.nav-top { list-style-type: none; display: inline-block; margin-left: 16px; }
-.nav-top li { font-size: 24px; display: inline-block; }
-.nav-top li a { padding: 4px 16px; }
+.top { background-color: #2F2D27; color: #444038; position: relative; margin-top: 32px; overflow: hidden; border-bottom: 2px solid #444038; }
+.nav-top { list-style-type: none; }
+.nav-top>li { display: inline-block; }
+.nav-top>li:first-child { background: url('../images/logo.svg') no-repeat 142px -8px; display: inline-block; width: 200px; padding: 16px 32px 16px 0; border-right: 2px solid #444038; }
+.nav-top>li:first-child a { color: #FFE3A4; }
+.nav-top>li>ul {  }
+.nav-top>li>ul:before,
+.nav-top>li>ul:after { display: table; content: ' '; }
+.nav-top>li>ul>li { display: table-cell; width: 1%; font-size: 32px; }
+.nav-top>li>ul>li a { background-color: #292722; padding: 16px 32px; }
+.nav-top>li>ul>li a:hover { background-color: #444038; }
 .nav-top li:not(:last-child) a { border-right: 2px solid #444038; }
-.nav-top li a:hover { color: #F9B377; }
-.nav-top li a.active { font-weight: bold; }
 
 /* Content Wrapper */
 .content { background-color: #2F2D27; color: #FFE3A4; position: relative; overflow: hidden; }
@@ -93,11 +97,11 @@ body > div { width: auto; padding: 0 32px; margin: 0 auto; }
 .padlist tr > *:last-child { text-align: right; width: 100px; padding-right: 0; }
 .padlist tr > td:nth-child(2) { font-weight: bold; }
 .padlist button { text-align: left; height: 41px; width: 130px; position: relative; border-top: none; border-bottom: none; }
-.padlist button > span[class^="icon-"]:first-child { margin: 0 8px; }
+.padlist button > span[class^="icon-"] { margin: 0 8px; }
 
 /* Footer */
 .footer { padding: 16px 32px; margin-bottom: 32px; overflow: hidden; position: relative; border-bottom: 2px solid #444038; }
-.footer a { color: #7A4135; text-decoration: underline; }
+.footer a { color: #7A4135; text-decoration: underline; text-shadow: none; }
 .footer a:hover { text-decoration: none; }
 .footer .left a, .footer .right { font-size: 14px; }
 .FlattrButton, .twitter-follow-button { padding-right: 8px; }
