--- a/app/styles/icons.css
+++ b/app/styles/icons.css
@@ -1,9 +1,4 @@
-/******************/
-/*** Shownot.es ***/
-/**** Ver. 2.0 ****/
-/******************/
-
-/* General */
+/* Import Icon Fonts */
 @font-face { font-family: 'icomoon'; src:url('../fonts/icomoon.eot'); src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'), url('../fonts/icomoon.woff') format('woff'), url('../fonts/icomoon.ttf') format('truetype'), url('../fonts/icomoon.svg#icomoon') format('svg'); font-weight: normal; font-style: normal; }
 [class^="icon-"], [class*=" icon-"] { font-family: 'icomoon'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; }
 
@@ -85,4 +80,7 @@
 }
 .icon-link:before {
     content: "\e619";
+}
+.icon-menu:before {
+    content: "\e61a";
 }
