--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -142,7 +142,17 @@ body > div { padding: 0 32px; margin: 0 auto; }
 	.nav-top h1 { background: url('../images/logo.svg') no-repeat 174px -8px; display: block; width: auto; border-right: none; padding-left: 32px; border-bottom: 2px solid #444038; }
 	.nav-top { width: auto; }
 	.nav-top>li h1>span { display: inline-block; }
-	.nav-top>li>ul { width: 100%; display: none; }
+	.nav-top>li>ul {
+		width: 100%;
+		max-height: 0;
+		overflow: hidden;
+		-webkit-transition: max-height 0.5s;
+		-moz-transition: max-height 0.5s;
+		transition: max-height 0.5s;
+	}
+	.nav-top>li>ul.open {
+		max-height: 300px;
+	}
 	.nav-top>li>ul>li { display: block; width: auto; }
 	.nav-top>li>ul>li a { border-right: none; border-bottom: 2px solid #444038; }
 	.sidebar { width: 100%; padding: 0 32px 16px 32px; margin: auto 0 16px -32px; border-bottom: 2px solid #444038; }
