--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,5 @@
 <h2 translate="main.list.title"></h2>
+<p class="hint" translate="main.list.hint"></p>
 <table class="padlist">
     <tr>
         <th translate>main.list.starttime</th>
