--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,14 +5,14 @@
 @font-face { font-family: 'FiraSans'; font-style: italic; font-weight: bold; src: url('../fonts/FiraSans-BoldItalic.eot'); src: url('../fonts/FiraSans-BoldItalic.eot?#iefix') format('embedded-opentype'), url('../fonts/FiraSans-BoldItalic.woff') format('woff'); }
 
 /* General */
-* { margin: 0; padding: 0; border: 0; font-family: 'FiraSans'; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+* { margin: 0; padding: 0; border: 0; font-family: 'FiraSans'; letter-spacing: 0.01em; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 ::selection { background: #FF8468; color: #2F2D27; text-shadow: none; }
 ::-moz-selection { background: #FF8468;	color: #2F2D27; text-shadow: none; }
 h1,
 h2,
 h3 { font-weight: bold; }
 h1 { font-size: 32px; }
-h2 { font-size: 24px; }
+h2 { font-size: 24px; margin-bottom: 18px; }
 h3 { font-size: 18px; }
 p { line-height: 1.4em; }
 hr { border: 0; border-top: 2px solid #FFE3A4; }
@@ -54,7 +54,7 @@ a.lostpass:hover,
 .item p a:hover { color: #F9B377; }
 
 /* Body */
-body { background-color: #FFE3A4; color: #2F2D27; font-size: 0;  margin: 0 5%; }
+body { background-color: #FFE3A4; color: #2F2D27; font-size: 0; margin: 0 5%; }
 body > div { padding: 0 32px; margin: 0 auto; }
 
 /* Header */
@@ -80,6 +80,7 @@ body > div { padding: 0 32px; margin: 0 auto; }
 .item { padding-top: 16px; margin-left: 32px; }
 .item:not(:last-child) { border-bottom: 2px solid #444038; }
 .item p { font-size: 14px; padding-bottom: 16px; }
+.hint { background-color: #292722; padding: 16px; }
 .meta { font-size: 14px; color: #444038; margin: 4px 0 16px 0; }
 .load { width: 120px; }
 .load span { margin-right: 8px; }
@@ -93,7 +94,7 @@ body > div { padding: 0 32px; margin: 0 auto; }
 .padlist tr > *:first-child { padding-left: 16px; }
 .padlist tr > *:last-child { text-align: right; width: 100px; padding-right: 0; }
 .padlist tr > td:nth-child(2) { font-weight: bold; }
-.padlist button { text-align: left; height: 41px; width: 130px; position: relative; border-top: none; border-bottom: none; }
+.padlist button { text-align: left; min-height: 41px; width: 130px; position: relative; border-top: none; border-bottom: none; }
 .padlist button > span[class^="icon-"] { margin: 0 8px; }
 
 /* Footer */
